--- a/.github/workflows/R1S-H5.yml
+++ b/.github/workflows/R1S-H5.yml
@@ -32,12 +32,10 @@ env:
   UPLOAD_WETRANSFER: false
   UPLOAD_RELEASE: true
   TZ: Asia/Shanghai
-
+permissions: write-all
 jobs:
   build:
     runs-on: ubuntu-20.04
-    permissions:
-      contents: write
     steps:
     - name: Checkout
       uses: actions/checkout@v2
